--- a/Day001/index.html
+++ b/Day001/index.html
@@ -15,13 +15,13 @@
             <div class="form-field">
                 <span class="material-icons">badge</span><label for="">
                     Full Name</label>
-                    <input type="text">
+                    <input type="text" placeholder="Tendai Chikwiri" >
                     <br>
             </div>
             <div class="form-field">
                 <span class="material-icons">email</span><label for="">
                     Email</label>
-                    <input type="email" name="" id="">
+                    <input placeholder="tfchikwiri@gmail.com" type="email" name="" id="">
                     <br>
             </div>
             <div class="form-field">
